--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /allure-results
+/ErrorImages
+/client_secret_1080640798483-bqaftm7hm7r5429hkbs26n944unhc3el.apps.googleusercontent.com.json
