--- a/ApiTests/ApiTests.csproj
+++ b/ApiTests/ApiTests.csproj
@@ -10,16 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Allure.Net.Commons" Version="2.9.0" />
+    <PackageReference Include="Allure.Net.Commons" Version="2.11.0" />
+    <PackageReference Include="Allure.NUnit" Version="2.11.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-    <PackageReference Include="NuGet.Frameworks" Version="6.7.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="NuGet.Frameworks" Version="6.8.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit.Allure" Version="1.2.0.1" />
-    <PackageReference Include="NUnit.Allure.Steps" Version="1.0.7.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
