--- a/Playwright/Playwright.csproj
+++ b/Playwright/Playwright.csproj
@@ -14,34 +14,35 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Allure.Commons" Version="3.5.0.73" />
-    <PackageReference Include="Allure.Net.Commons" Version="2.9.0" />
-    <PackageReference Include="chilkat-x64" Version="9.5.0.95" />
-    <PackageReference Include="ChilkatNativeLib" Version="9.50.95" />
+    <PackageReference Include="Allure.Net.Commons" Version="2.11.0" />
+    <PackageReference Include="Allure.NUnit" Version="2.11.0" />
+    <PackageReference Include="chilkat-x64" Version="9.5.0.96" />
+    <PackageReference Include="ChilkatNativeLib" Version="9.50.96" />
     <PackageReference Include="coverlet.collector" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.52" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-    <PackageReference Include="Microsoft.Playwright" Version="1.38.0" />
-    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.37.1" />
-    <PackageReference Include="Microsoft.Playwright.TestAdapter" Version="1.37.1" />
+    <PackageReference Include="Google.Apis" Version="1.64.0" />
+    <PackageReference Include="Google.Apis.Core" Version="1.64.0" />
+    <PackageReference Include="Google.Apis.Gmail.v1" Version="1.64.0.3231" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.41.2" />
+    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.41.2" />
+    <PackageReference Include="Microsoft.Playwright.TestAdapter" Version="1.41.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NuGet.Frameworks" Version="6.7.0" />
+    <PackageReference Include="NuGet.Frameworks" Version="6.8.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit.Allure" Version="1.2.0.1" />
-    <PackageReference Include="NUnit.Allure.Steps" Version="1.0.7.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="PutsboxWrapper" Version="1.0.0" />
-    <PackageReference Include="RimuTec.Faker" Version="2.0.0" />
+    <PackageReference Include="RimuTec.Faker" Version="2.1.0" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
