Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /client_secret_1080640798483-bqaftm7hm7r5429hkbs26n944unhc3el.apps.googleusercontent.com.json
 
 TestData.cs
+/Playwright/Helpers/TestData.cs
