--- a/Playwright/Playwright.csproj
+++ b/Playwright/Playwright.csproj
@@ -16,9 +16,10 @@
   <ItemGroup>
     <PackageReference Include="Allure.Net.Commons" Version="2.12.1" />
     <PackageReference Include="Allure.NUnit" Version="2.12.1" />
-    <PackageReference Include="chilkat-x64" Version="10.0.0" />
-    <PackageReference Include="ChilkatNativeLib" Version="10.0.1" />
-    <PackageReference Include="coverlet.collector" Version="6.0.2">
+    <PackageReference Include="chilkat-x64" Version="10.1.0" />
+    <PackageReference Include="ChilkatNativeLib" Version="10.1.0" />
+    <PackageReference Include="Chromium.ChromeDriver" Version="2.37.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -26,17 +27,17 @@
     <PackageReference Include="Google.Apis" Version="1.68.0" />
     <PackageReference Include="Google.Apis.Core" Version="1.68.0" />
     <PackageReference Include="Google.Apis.Gmail.v1" Version="1.68.0.3427" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Microsoft.Playwright" Version="1.49.0" />
     <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.49.0" />
     <PackageReference Include="Microsoft.Playwright.TestAdapter" Version="1.49.0" />
-    <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.30.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NuGet.Frameworks" Version="6.12.1" />
-    <PackageReference Include="NUnit" Version="4.2.2" />
-    <PackageReference Include="NUnit.Analyzers" Version="4.4.0">
+    <PackageReference Include="NUnit" Version="4.3.2" />
+    <PackageReference Include="NUnit.Analyzers" Version="4.5.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -44,7 +45,8 @@
     <PackageReference Include="PutsboxWrapper" Version="1.0.0" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="RimuTec.Faker" Version="2.1.0" />
-    <PackageReference Include="Telegram.Bot" Version="22.1.3" />
+    <PackageReference Include="Telegram.Bot" Version="22.3.0" />
+    <PackageReference Include="WebDriver.ChromeDriver.win32" Version="114.0.5735.90" />
   </ItemGroup>
 
 </Project>
